--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,13 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=21w44a
-yarn_mappings=21w44a+build.3
-loader_version=0.12.4
+minecraft_version=1.17.1
+yarn_mappings=1.17.1+build.63
+loader_version=0.12.5
 # Mod Properties
 mod_version=0.1
 maven_group=net
-archives_base_name=justcopper
+archives_base_name=justcoppertools
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.41.4+1.18
+fabric_version=0.42.1+1.17
