--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.18-pre5
-yarn_mappings=1.18-pre5+build.2
+minecraft_version=1.18-rc1
+yarn_mappings=1.18-rc1+build.1
 loader_version=0.12.4
 # Mod Properties
 mod_version=0.1.1
@@ -11,4 +11,4 @@ maven_group=net
 archives_base_name=justcoppertools
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.42.8+1.18
+fabric_version=0.43.1+1.18
