--- a/gradle.properties
+++ b/gradle.properties
@@ -2,9 +2,9 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.18-rc1
-yarn_mappings=1.18-rc1+build.1
-loader_version=0.12.4
+minecraft_version=1.18
+yarn_mappings=1.18+build.1
+loader_version=0.12.6
 # Mod Properties
 mod_version=0.1.1
 maven_group=net
