Update to 1.19 and warnings suppress

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,13 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.18
-yarn_mappings=1.18+build.1
-loader_version=0.12.6
+minecraft_version=22w13a
+yarn_mappings=22w13a+build.2
+loader_version=0.13.3
 # Mod Properties
 mod_version=0.1.2
 maven_group=net
 archives_base_name=justcoppertools
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.43.1+1.18
+fabric_version=0.49.5+1.19
